<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="number_of_tasks">Number of Tasks</string>
    <string name="build">Build</string>
    <string name="add">Add</string>
    <string name="TODO">Todo</string>
    <string name="DOING">Doing</string>
    <string name="DONE">Done</string>
    <string name="your_list_is_empty">your list is empty</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="subject">Subject</string>
    <string name="title">Title</string>
    <string name="addingTask">Add Task</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="editTask">Edit or Remove</string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="remove">remove</string>
    <string name="remove_all">remove all</string>
    <string name="logout">logout</string>
    <string name="yes">yes</string>
    <string name="sureAlertMessage">Are you sure to remove all tasks ?</string>
    <string name="removeUser">Are you sure to remove this user ?</string>
    <string name="search_subject">search subject</string>
    <string name="search_title">search title</string>
    <string name="search">search</string>
    <string name="signup_as_admin">Signup as Admin</string>
    <string name="all_users">All users</string>
    <string name="userInfo">User Info</string>
    <string name="close">close</string>
    <string name="taskShareSubject">Share Task</string>
    <string name="successful_signup">successful signup</string>


</resources>