<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/remove_all_task_menu_item"
        android:icon="@drawable/ic_remove_all_white"
        android:title="@string/remove_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout_menu_item"
        android:icon="@drawable/ic_logout_white"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_all_users"
        android:icon="@drawable/ic_all_users"
        android:title="@string/all_users"
        app:showAsAction="ifRoom" />
</menu>