<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.LoginFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    >

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="72dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:textSize="22sp"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/button_signUp"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/sign_up"

        />

</LinearLayout>